--- a/src/plugins/import-content-type/package.json
+++ b/src/plugins/import-content-type/package.json
@@ -22,17 +22,22 @@
     "verify": "strapi-plugin verify",
     "test:ts:back": "run -T tsc -p server/tsconfig.json"
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^1.9.0",
+    "mime-types": "^3.0.1",
+    "node-fetch": "^3.3.2",
+    "uuid": "^11.1.0"
+  },
   "devDependencies": {
-    "@strapi/strapi": "^5.13.0",
     "@strapi/sdk-plugin": "^5.3.2",
-    "prettier": "^3.5.3",
+    "@strapi/strapi": "^5.13.0",
     "@strapi/typescript-utils": "^5.13.0",
+    "prettier": "^3.5.3",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
-    "@strapi/strapi": "^5.13.0",
-    "@strapi/sdk-plugin": "^5.3.2"
+    "@strapi/sdk-plugin": "^5.3.2",
+    "@strapi/strapi": "^5.13.0"
   },
   "strapi": {
     "kind": "plugin",
