--- a/src/plugins/import-content-type/package.json
+++ b/src/plugins/import-content-type/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "form-data": "^4.0.0",
     "mime-types": "^3.0.1",
     "node-fetch": "^3.3.2",
     "uuid": "^11.1.0"
